--- a/index.html
+++ b/index.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe App</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-    <div class="mobile-container">
-        <div class="search-bar">
-            <input type="text">
-            <button>Search</button>
-        </div>
-       
-        <div class="fav-container">
-            <h3>Favorite meals</h3>
-            <ul>
-                <li><img src="https://www.themealdb.com//images//media//meals//1550441275.jpg" alt=""><span>Egg rice</span></li>
-                <li><img src="https://www.themealdb.com//images//media//meals//qwtrtp1511799242.jpg" alt=""><span>Black pepper</span></li>
-                <li><img src="https:\/\/www.themealdb.com\/images\/media\/meals\/1525876468.jpg" alt=""><span>Dumplings</span></li>
-            </ul>
-        </div>
-        <div class="meal-list">
-            <div class="meal-header">
-                <img src="" alt="">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Recipes App</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+        />
+        <link rel="stylesheet" href="main.css" />
+        <script src="script.js" defer></script>
+    </head>
+    <body>
+        <div class="mobile-container">
+            <header>
+                <input type="text" id="search-term" />
+                <button id="search"><i class="fas fa-search"></i></button>
+            </header>
+            <div class="fav-container">
+                <h3>Favorite Meals</h3>
+                <ul class="fav-meals" id="fav-meals"></ul>
             </div>
-            <div class="meal-text">
-                <h4>Pav Bhaji</h4>
-            </div>
+            <div class="meals" id="meals"></div>
         </div>
 
-    </div>
-<script src="script.js"></script>        
-</body>
+        <div class="popup-container hidden" id="meal-popup">
+            <div class="popup">
+                <button id="close-popup" class="close-popup">
+                    <i class="fas fa-times"></i>
+                </button>
+                <div class="meal-info" id="meal-info"></div>
+            </div>
+        </div>
+    </body>
 </html>
